# django_store

./: .gitignore  README.md  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_image_post_preview_image_and_more.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
blog/templates/includes/: inc_menu.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: catalog.json
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/: base.html  contacts.html  home.html  index.html  pagination.html  product_confirm_delete.html  product_detail.html  product_form.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
templates/: base.html
templates/includes/: inc_menu.html
