[tool.poetry]
name = "django-store"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.8"
pillow = "^12.0.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.18.2"
isort = "^7.0.0"
black = "^25.9.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
